--- a/index.html
+++ b/index.html
@@ -9,14 +9,36 @@
 </head>
 <body>
         <header>
-            <h1>Header</h1>
+            <h1>Welcome! <span><a href="https://github.com/whirmon/HTML-CSS-Project">view repository</a></span></h1>
         </header>
         <nav>
-            <ul>
-                <li>
-                    <a href="">Nav</a>
-                </li>
-            </ul>
+<p>
+    <a href="./index.html">Homepage</a>
+</p>
+<p>
+    <a href="./specials.html">Specials</a>
+</p>
+<p>
+    <a href="./burgers.html">Burgers</a>
+</p>
+<p>
+    <a href="./sandwiches.html">Sandwiches</a>
+</p>
+<p>
+    <a href="./tacos.html">Tacos</a>
+</p>
+<p>
+    <a href="./wings.html">Wings</a>
+</p>
+<p>
+    <a href="./desserts.html">Desserts</a>
+</p>
+<p>
+    <a href="./drinks.html">Drinks</a>
+</p>
+<p>
+    <a href="./order.html">Your order</a>
+</p>
         </nav>
         <main>
             <section>
