Changes to layout
Changes to the layout

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="./assets/img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
         <header>
-            <h1>Welcome! <span><a href="https://github.com/whirmon/HTML-CSS-Project">view repository</a></span></h1>
+            <h1 id="tittle">JJBB</h1>
+            <img src="./assets/img/logo.svg" id="logo">
+            <h2 id="slogan">Home of best artisan gourmet burgers</h2>
         </header>
         <nav>
 <p>
@@ -41,21 +44,147 @@
 </p>
         </nav>
         <main>
-            <section>
-                <p>section 1</p>
-            </section>
-            <section>
-                <p>section 2</p>
-            </section>
-            <section>
-                <p>section 3</p>
+            <section class="burger-block">
+                <!--Burger block-->
+                <div class="burger">
+                    <img src="./assets/img/BaconBlueCheeseBurger.jpg" alt="" class="master">
+                    <h4>Bacon Blue Cheese Burger</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime quisquam? Obcaecati recusandae quos consequuntur rerum? Iusto quidem est ut asperiores qui consectetur eius odio quos consequatur similique! Sed, asperiores.</p>
+                    <form action="">
+                        <label for="">Quantity:</label>
+                        <input type="number" name="" id="" step="1" min="1" max="8">
+                        <input type="reset" value="clear">
+                        <input type="submit" value="add">
+                    </form>
+                </div>
+                <!--end Burger block-->
+                <!--Burger block-->
+                <div class="burger">
+                    <img src="./assets/img/BaconBlueCheeseBurger.jpg" alt="" class="master">
+                    <h4>Bacon Blue Cheese Burger</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime quisquam? Obcaecati recusandae quos consequuntur rerum? Iusto quidem est ut asperiores qui consectetur eius odio quos consequatur similique! Sed, asperiores.</p>
+                    <form action="">
+                        <label for="">Quantity:</label>
+                        <input type="number" name="" id="" step="1" min="1" max="8">
+                        <input type="reset" value="clear">
+                        <input type="submit" value="add">
+                    </form>
+                </div>
+                <!--end Burger block-->
+                <!--Burger block-->
+                <div class="burger">
+                    <img src="./assets/img/BaconBlueCheeseBurger.jpg" alt="" class="master">
+                    <h4>Bacon Blue Cheese Burger</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime quisquam? Obcaecati recusandae quos consequuntur rerum? Iusto quidem est ut asperiores qui consectetur eius odio quos consequatur similique! Sed, asperiores.</p>
+                    <form action="">
+                        <label for="">Quantity:</label>
+                        <input type="number" name="" id="" step="1" min="1" max="8">
+                        <input type="reset" value="clear">
+                        <input type="submit" value="add">
+                    </form>
+                </div>
+                <!--end Burger block-->
+                <!--Burger block-->
+                <div class="burger">
+                    <img src="./assets/img/BaconBlueCheeseBurger.jpg" alt="" class="master">
+                    <h4>Bacon Blue Cheese Burger</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime quisquam? Obcaecati recusandae quos consequuntur rerum? Iusto quidem est ut asperiores qui consectetur eius odio quos consequatur similique! Sed, asperiores.</p>
+                    <form action="">
+                        <label for="">Quantity:</label>
+                        <input type="number" name="" id="" step="1" min="1" max="8">
+                        <input type="reset" value="clear">
+                        <input type="submit" value="add">
+                    </form>
+                </div>
+                <!--end Burger block-->
+                <!--Burger block-->
+                <div class="burger">
+                    <img src="./assets/img/BaconBlueCheeseBurger.jpg" alt="" class="master">
+                    <h4>Bacon Blue Cheese Burger</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime quisquam? Obcaecati recusandae quos consequuntur rerum? Iusto quidem est ut asperiores qui consectetur eius odio quos consequatur similique! Sed, asperiores.</p>
+                    <form action="">
+                        <label for="">Quantity:</label>
+                        <input type="number" name="" id="" step="1" min="1" max="8">
+                        <input type="reset" value="clear">
+                        <input type="submit" value="add">
+                    </form>
+                </div>
+                <!--end Burger block-->
+                <!--Burger block-->
+                <div class="burger">
+                    <img src="./assets/img/BaconBlueCheeseBurger.jpg" alt="" class="master">
+                    <h4>Bacon Blue Cheese Burger</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime quisquam? Obcaecati recusandae quos consequuntur rerum? Iusto quidem est ut asperiores qui consectetur eius odio quos consequatur similique! Sed, asperiores.</p>
+                    <form action="">
+                        <label for="">Quantity:</label>
+                        <input type="number" name="" id="" step="1" min="1" max="8">
+                        <input type="reset" value="clear">
+                        <input type="submit" value="add">
+                    </form>
+                </div>
+                <!--end Burger block-->
+                <!--Burger block-->
+                <div class="burger">
+                    <img src="./assets/img/BaconBlueCheeseBurger.jpg" alt="" class="master">
+                    <h4>Bacon Blue Cheese Burger</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime quisquam? Obcaecati recusandae quos consequuntur rerum? Iusto quidem est ut asperiores qui consectetur eius odio quos consequatur similique! Sed, asperiores.</p>
+                    <form action="">
+                        <label for="">Quantity:</label>
+                        <input type="number" name="" id="" step="1" min="1" max="8">
+                        <input type="reset" value="clear">
+                        <input type="submit" value="add">
+                    </form>
+                </div>
+                <!--end Burger block-->
+                <!--Burger block-->
+                <div class="burger">
+                    <img src="./assets/img/BaconBlueCheeseBurger.jpg" alt="" class="master">
+                    <h4>Bacon Blue Cheese Burger</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime quisquam? Obcaecati recusandae quos consequuntur rerum? Iusto quidem est ut asperiores qui consectetur eius odio quos consequatur similique! Sed, asperiores.</p>
+                    <form action="">
+                        <label for="">Quantity:</label>
+                        <input type="number" name="" id="" step="1" min="1" max="8">
+                        <input type="reset" value="clear">
+                        <input type="submit" value="add">
+                    </form>
+                </div>
+                <!--end Burger block-->
+                <!--Burger block-->
+                <div class="burger">
+                    <img src="./assets/img/BaconBlueCheeseBurger.jpg" alt="" class="master">
+                    <h4>Bacon Blue Cheese Burger</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime quisquam? Obcaecati recusandae quos consequuntur rerum? Iusto quidem est ut asperiores qui consectetur eius odio quos consequatur similique! Sed, asperiores.</p>
+                    <form action="">
+                        <label for="">Quantity:</label>
+                        <input type="number" name="" id="" step="1" min="1" max="8">
+                        <input type="reset" value="clear">
+                        <input type="submit" value="add">
+                    </form>
+                </div>
+                <!--end Burger block-->
             </section>
         </main>
         <aside>
             <p>aside</p>
         </aside>
         <footer>
-            <p>footer</p>
+<div>
+    <p>WHO WE ARE?</p>
+    <p><a href="#">ABOUT US</a></p>
+    <p><a href="#">LOCATIONS</a></p>
+    <p><a href="#">CUSTOMER SUPPORT</a></p>
+    <p><a href="#">PRIVATE EVENTS</a></p>
+    <p><a href="#">WORK WITH US</a></p>
+</div>
+<div>
+<p>ABOUT US</p>
+<p><a href="#">TERMS AND CONDITIONS</a></p>
+<p><a href="#">CONTACT US</a></p>
+<p><a href="#">FAQS</a></p>
+</div>
+<div>
+    <p>ALL RIGHTS RESERVED</p>
+</div>
         </footer>
 </body>
 </html>
